# Streamlit_in_Action

./: .gitignore  pyproject.toml
.devcontainer/: devcontainer.json
chapter_01/: basic_chatbot.py  basic_histogram.py  line_chart.py  tabs_example.py
chapter_02/: password_checker.py
chapter_03/: backend.py  frontend.py  quantity.py  unit_config.py
chapter_04/: todo_list.py
chapter_05/: jokes.py  todo_list.py
chapter_06/: dashboard.py  data_loader.py  data_wrangling.py  date_range_panel.py  filter_panel.py  metric_bar.py  metric_config.py  pie_chart.py  time_series_chart.py
